--- a/MiniFb/backend/auth/config/config.json
+++ b/MiniFb/backend/auth/config/config.json
@@ -1,7 +1,7 @@
 {
     "development":{
         "PORT": 3000,
-        "MONGODB_URI": "mongodb://localhost:27017/FBmini",
+        "MONGODB_URI": "mongodb://mongo:27017/AuthDB",
         "JWT_SECRET" : "SECRET#123",
         "JWT_EXP": "2m"
     },
