--- a/MiniFb/backend/story/config/config.json
+++ b/MiniFb/backend/story/config/config.json
@@ -1,7 +1,7 @@
 {
     "development":{
         "PORT": 3002,
-        "MONGODB_URI": "mongodb://localhost:27017/FBmini",
+        "MONGODB_URI": "mongodb://localhost:27017/StoryDB",
         "JWT_SECRET" : "SECRET#123",
         "JWT_EXP": "2m"
     },
