--- a/MiniFb/backend/docker-compose.yml
+++ b/MiniFb/backend/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.9"
+version: "3"
 services:
   nginx:
     image: nginx
@@ -48,7 +48,8 @@ services:
       - MINIO_ROOT_USER=minioadmin
       - MINIO_ROOT_PASSWORD=minioadmin
     command: server --address 0.0.0.0:9000 /data
-
+    volumes:
+      - storyobjectdata:/data
   account-service:
     build: ./auth
     restart: unless-stopped
@@ -69,6 +70,8 @@ services:
       - db-status
     environment:
       DB_URL: mongodb://db-status/StatusDatabase
+
+
   story-service:
     build: ./story
     restart: unless-stopped
@@ -86,3 +89,4 @@ volumes:
   status:
   story:
   account:
+  storyobjectdata:
