--- a/MiniFb/backend/post/config/config.json
+++ b/MiniFb/backend/post/config/config.json
@@ -1,7 +1,7 @@
 {
     "development":{
         "PORT": 3005,
-        "MONGODB_URI": "mongodb://localhost:27017/PostDB",
+        "MONGODB_URI": "mongodb://db-status/StatusDatabase",
         "JWT_SECRET" : "SECRET#123",
         "JWT_EXP": "2m"
     },
