--- a/MiniFb/backend/story/Dockerfile
+++ b/MiniFb/backend/story/Dockerfile
@@ -1,9 +1,9 @@
 FROM node:18.7.0
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
-COPY package*.json ./usr/src/app
+COPY package*.json ./
 RUN npm install
-COPY . /usr/src/app
+COPY . .
 EXPOSE 3002
 
 CMD ["node", "app.js"]
