docker chole, story dekha jay na

--- a/MiniFb/backend/nginx.conf
+++ b/MiniFb/backend/nginx.conf
@@ -4,13 +4,12 @@ server {
 
 
 	location /story {
-		proxy_pass http://127.0.0.1:3002/api/story;
-
+		proxy_pass http://story-service:3002/api/story;
 	}
 	location /post{
-		proxy_pass http://127.0.0.1:3001/api/post;
+		proxy_pass http://status-service:3001/api/post;
 	}
 	location /auth{
-		proxy_pass http://127.0.0.1:3000/api/auth;
+		proxy_pass http://account-service:3000/api/auth;
 	}
 }
