--- a/MiniFb/backend/docker-compose.yml
+++ b/MiniFb/backend/docker-compose.yml
@@ -31,13 +31,19 @@ services:
       - story:/data/db
 
   storyobjectdb:
-    image: minio/minio:latest
-    environment:
-      - MINIO_ROOT_USER=minioadmin
-      - MINIO_ROOT_PASSWORD=minioadmin
-    command: server --address 0.0.0.0:9000 /data
-    volumes:
-      - storyobjectdata:/data
+        container_name: storyobjectdb
+        image: minio/minio:latest
+        ports:
+            - 9000:9000
+            - 9001:9001
+        environment:
+            - MINIO_ROOT_USER=minioadmin
+            - MINIO_ROOT_PASSWORD=minioadmin
+        command: server --console-address ":9001" /data
+       
+        volumes:
+            - storyobjectdata:/data
+
   account-service:
     build: ./auth
     restart: unless-stopped
