--- a/MiniFb/docker-compose.yml
+++ b/MiniFb/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     restart: unless-stopped
     ports:
       - 8080:8080
-    volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    # volumes:
+    #   - ./nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - account-service
       - status-service
@@ -32,13 +32,13 @@ services:
       - 27019:27017
     volumes:
       - story:/data/db
-
+  # comment
   storyobjectdb:
         # container_name: storyobjectdb
         image: minio/minio:latest
         ports:
             - 9000:9000
-            - 9001:9001
+            # - 9001:9001
         environment:
             - MINIO_ROOT_USER=minioadmin
             - MINIO_ROOT_PASSWORD=minioadmin
@@ -56,7 +56,7 @@ services:
     depends_on:
       - db-account
     environment:
-      DB_URL: mongodb://db-account/AccountDatabase
+      DB_URL: mongodb://db-account:27017/account-service
 
   status-service: 
     build: ./backend/post
@@ -68,7 +68,7 @@ services:
       - account-service
       - db-status
     environment:
-      DB_URL: mongodb://db-status/StatusDatabase
+      DB_URL: mongodb://db-status:27017/status-service
 
 
   story-service:
@@ -82,7 +82,7 @@ services:
       - account-service
       - storyobjectdb
     environment:
-      DB_URL: mongodb://db-story/StoryDatabases
+      DB_URL: mongodb://db-story:27017/story-service
   
   # frontend:
   #   container_name: frontend
@@ -99,3 +99,4 @@ volumes:
   story:
   account:
   storyobjectdata:
+
